welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:5: error: Missing closing brace `}' assumed here
 do {
 ^